--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,24 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:recommended"
-  ]
+    "config:base"
+  ], 
+  "packageRules": [
+    {
+      "matchUpdateTypes": [
+        "minor",
+        "patch",
+        "pin",
+        "digest"
+      ],
+      "automerge": true
+    },
+     {
+      "matchDepTypes": [
+        "devDependencies",
+      ],
+      "automerge": true
+    },
+    "platformAutomerge": true,
+    "automergeType": "pr"
 }
