--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@t3-oss/env-nextjs": "^0.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "geist": "^1.3.0",
     "jiti": "^1.21.0",
     "lucide-react": "^0.381.0",
     "next": "14.2.3",
