--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jiti": "^1.21.0",
     "lucide-react": "^0.427.0",
     "next": "14.2.5",
+    "next-auth": "5.0.0-beta.20",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
