chore: update configuration to limit open pull requests and specify versioning strategy

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,3 +8,7 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "daily"
+    open-pull-requests-limit: 1
+    versioning-strategy: "increase"
+    allow:
+      - dependency-type: "direct"
