--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.11.0",
+    "@tailwindcss/postcss": "^4.0.10",
     "class-variance-authority": "^0.7.1",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "geist": "^1.3.0",
     "jiti": "^2.4.1",
     "lucide-react": "^0.471.0",
@@ -32,10 +33,10 @@
     "@types/react-dom": "^18",
     "eslint": "^9.21.0",
     "eslint-config-next": "15.1.7",
-    "postcss": "^8",
+    "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.10",
     "typescript": "^5"
   }
 }
