--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -37,6 +36,7 @@
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.0",
     "tailwindcss": "^4.0.10",
+    "tw-animate-css": "^1.2.8",
     "typescript": "^5"
   }
 }
